--- a/public/css/app.css
+++ b/public/css/app.css
@@ -72,9 +72,11 @@ body {
   line-height: 1.6;
   color: #212529;
   text-align: left;
-  background-color: #f8fafc;
+  /* background-color: #f8fafc; */
   height: 100vh;
   display: flex;
+  background: url('../img/bg.png') no-repeat center;
+  background-size: cover;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
