--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2,7 +2,7 @@
     display: flex;
     /* width: 100%; */
     align-items: stretch;
-    width: 1400px;
+    width: 1280px;
     margin: auto;
     background-color: transparent;    
 }
@@ -190,4 +190,31 @@ input[type="radio"]:checked {
 #map {
     width: 100%;
     height: 100%;
+}
+
+@media only screen and (max-width: 1400px) {
+    .wrapper {
+        width: 1080px;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .wrapper {
+        width: 890px;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .wrapper {
+        width: 720px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .wrapper {
+        width: 100%;
+    }
+    #content {
+        padding-top: 0px;
+    }
 }
